--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@
 # misc
 .DS_Store
 *.pem
+# Exception: Tesla public key needs to be deployed
+!public/.well-known/appspecific/com.tesla.3p.public-key.pem
 
 # debug
 npm-debug.log*
